--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task-2-JS</title>
 </head>
 <body>
+    <body>
     
+        <script src="script1.js"></script> 
+        <script src="script2.js"></script>
+        <script src="script3.js"></script>
+        <script src="script4.js"></script>
+        <script src="script5.js"></script>
+    </body>
 </body>
 </html>
